# libiamf

./: .gitmodules  CONTRIBUTING.md  README.md  README_Primitive_Test.md
.github/actions/libiamf-builder/: action.yml
.github/workflows/: build.yml  ci.yml
code/: AUTHORS.TXT  CMakeLists.txt  README.md  build_x86.sh
code/dep_codecs/: CMakeLists.txt  README.md  README.txt  build.sh
code/dep_codecs/lib/: fdk-aac.lib  libfdk-aac.la  libopus.la  opus.lib  opus_x64.lib
code/dep_codecs/lib/pkgconfig/: fdk-aac.pc  opus.pc
code/dep_external/: README.md
code/dep_external/include/bear/: iamf_bear_api.h
code/dep_external/src/binaural/: build.sh
code/dep_external/src/binaural/iamf2bear/: README.md  iamf2bear.cpp  iamf_bear_api.h
code/dep_external/src/binaural/iamf2resonance/: README.md  iamf2resonance.cc  resonance_audio_api2.h
code/dep_external/src/binaural/iamf2resonance/resonance_audio/lib/: README.md
code/dep_external/src/wav/: dep_wavwriter.c
code/include/: IAMF_decoder.h  IAMF_defines.h  vlogging_tool_sr.h
code/src/common/: IAMF_debug.h  audio_defines.h  audio_true_peak_meter.c  audio_true_peak_meter.h  bitstreamrw.c  bitstreamrw.h  fixedp11_5.c  fixedp11_5.h  wavreader2.c  wavreader2.h  wavwriter2.c  wavwriter2.h
code/src/iamf_dec/: IAMF_OBU.c  IAMF_OBU.h  IAMF_core_decoder.c  IAMF_debug_sr.c  IAMF_decoder.c  IAMF_decoder_private.h  IAMF_layout.c  IAMF_layout.h  IAMF_types.h  IAMF_utils.c  IAMF_utils.h  ae_rdr.h  arch.c  arch.h  audio_effect_peak_limiter.c  audio_effect_peak_limiter.h  bitstream.c  bitstream.h  demixer.c  demixer.h  downmix_renderer.c  downmix_renderer.h  h2b_rdr.c  h2m_rdr.c  iamf_audio_block.c  iamf_audio_block.h  iamf_core_decoder.c  iamf_core_decoder.h  iamf_database.c  iamf_database.h  iamf_decoder.c  iamf_decoder_private.h  iamf_element_reconstructor.c  iamf_element_reconstructor.h  iamf_layout.c  iamf_layout.h  iamf_obu_parser.c  iamf_obu_parser.h  iamf_post_processor.c  iamf_post_processor.h  (+17 more)
code/src/iamf_dec/aac/: IAMF_aac_decoder.c  aac_multistream_decoder.c
code/src/iamf_dec/arch/: arch_common.c  arch_common.h  arch_init.c  arch_init.h
code/src/iamf_dec/arch/arm/: arm_multiply_channels.c  arm_multiply_channels.h  arm_zip_channels.c  arm_zip_channels.h  detect_arm.h  override_arm.c
code/src/iamf_dec/arch/x86/: detect_x86.h  override_x86.c
code/src/iamf_dec/codec/: iamf_codec.h
code/src/iamf_dec/codec/aac/: aac_multistream_decoder.c  aac_multistream_decoder.h  iamf_aac_decoder.c
code/src/iamf_dec/codec/flac/: flac_multistream_decoder.c  flac_multistream_decoder.h  iamf_flac_decoder.c
code/src/iamf_dec/codec/opus/: iamf_opus_decoder.c  opus_multistream2_decoder.c  opus_multistream2_decoder.h
code/src/iamf_dec/codec/pcm/: iamf_pcm_decoder.c
code/src/iamf_dec/common/: cbuffer.c  cbuffer.h  cdeque.h  iorw.c  iorw.h
code/src/iamf_dec/debug/: iamf_debug_sr.c  iamf_obu_debug.h
code/src/iamf_dec/flac/: flac_multistream_decoder.c
code/src/iamf_dec/obu/: animated_parameter.c  animated_parameter.h  audio_element_obu.c  audio_element_obu.h  audio_frame_obu.c  audio_frame_obu.h  codec_config_obu.c  codec_config_obu.h  ia_sequence_header_obu.c  ia_sequence_header_obu.h  iamf_obu.c  iamf_obu.h  iamf_obu_all.h  metadata_obu.c  metadata_obu.h  mix_presentation_obu.c  mix_presentation_obu.h  parameter_base.c  parameter_base.h  parameter_block_obu.c  parameter_block_obu.h  temporal_delimiter_obu.c  temporal_delimiter_obu.h
code/src/iamf_dec/opus/: IAMF_opus_decoder.c  opus_multistream2_decoder.c  opus_multistream2_decoder.h
code/src/iamf_dec/pcm/: IAMF_pcm_decoder.c
code/test/tools/iamfdec/: CMakeLists.txt
code/test/tools/iamfdec/include/: iamfdec_private.h  mp4demux.h  mp4iamfpar.h  vlogging_iamfmp4_sr.h
code/test/tools/iamfdec/src/: mp4demux.c  mp4iamfpar.c  test_iamfdec.c  vlogging_iamfmp4_sr.c
code/test/tools/iamfplayer/: CMakeLists.txt
code/test/tools/iamfplayer/include/: a2b_endian.h  bitstreamrw.h  iamf_header.h  mp4demux.h  mp4iamfpar.h  vlogging_iamfmp4_sr.h  wavwriter.h
code/test/tools/iamfplayer/player/: iamfplayer.c
code/test/tools/iamfplayer/src/: atom.c  bitstreamrw.c  iamf_header.c  mp4demux.c  mp4iamfpar.c  vlogging_iamfmp4_sr.c  wavwriter.c
code/win32/VS2015/: iamf.vcxproj  iamf.vcxproj.filters
code/win32/VS2015/iamfplayer/: iamfplayer.vcxproj  iamfplayer.vcxproj.filters
code/win64/VS2022/iamf/: iamf.vcxproj  iamf.vcxproj.filters
proto/: audio_element.proto  audio_frame.proto  codec_config.proto  ia_sequence_header.proto  magic_code.proto  mix_presentation.proto  param_definitions.proto  parameter_block.proto  parameter_data.proto  test_vector_metadata.proto  user_metadata.proto
tests/: README.md  coverage.csv  dsp_utils.py  psnr_calc.py  run_decode_and_psnr_test.py  test_000000_3.iamf  test_000000_3.textproto  test_000001.iamf  test_000001.textproto  test_000002.iamf  test_000002.textproto  test_000003.iamf  test_000003.textproto  test_000004.iamf  test_000004.textproto  test_000005.iamf  test_000005.textproto  test_000006.iamf  test_000006.textproto  test_000007.iamf  test_000007.textproto  test_000008.iamf  test_000008.textproto  test_000009.iamf  test_000009.textproto  test_000010.iamf  test_000010.textproto  test_000011.iamf  test_000011.textproto  test_000012.iamf  test_000012.textproto  test_000013.iamf  test_000013.textproto  test_000014.iamf  test_000014.textproto  test_000015.iamf  test_000015.textproto  test_000016.iamf  test_000016.textproto  test_000017.iamf  (+514 more)
tests/proto/: arbitrary_obu.proto  audio_element.proto  audio_frame.proto  codec_config.proto  element_gain_offset_config.proto  encoder_control_metadata.proto  ia_sequence_header.proto  metadata_obu.proto  mix_presentation.proto  obu_header.proto  output_audio_format.proto  param_definitions.proto  parameter_block.proto  parameter_data.proto  temporal_delimiter.proto  test_vector_metadata.proto  types.proto  user_metadata.proto
